--- a/src/components/Information/Information.css
+++ b/src/components/Information/Information.css
@@ -18,7 +18,8 @@
     width: 100%;
     position: absolute;
     bottom: 0px;
-    background-color: rgba(0, 51, 106, 0.9);
+    /* background-color: rgba(0, 51, 106, 0.9); */
+    background-color: rgba(5, 116, 3, 0.9);
     border-radius: 0px 0px 10px 10px;
     justify-content: space-evenly;
 }
@@ -28,14 +29,16 @@
     flex-direction: row;
     justify-content: center;
     border: 1px solid rgba(0, 0, 0, 0.4);
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 8px;
-    width: 25%;
+    width: 33%;
     font-size: small;
     color: white;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .information-nav-btn:hover {
-    background-color: rgba(29, 122, 222, 0.9);
+    /* background-color: rgba(29, 122, 222, 0.9); */
+    background-color: rgba(27, 183, 24, 0.9);
 }
