--- a/src/components/ProfileCard/ProfileCard.css
+++ b/src/components/ProfileCard/ProfileCard.css
@@ -4,19 +4,16 @@
     align-items: center;
     height: 400px;
     width: 25%;
-    /* border: 1px solid black; */
     border-radius: 10px;
     box-shadow: 3px 3px 12px 1px rgba(0, 0, 0, 0.4);
-    /* background-color: rgba(0, 0, 0, 0.1); */
 }
 
 .profilecard-banner {
     height: 180px;
     width: 100%;
-    /* border-bottom: 1px solid rgba(0, 0, 0, 0.5); */
     border-radius: 10px 10px 0px 0px;
     background-color: rgba(150, 0, 0, 0.5);
-    background-image: url(https://media.giphy.com/media/r2DZ7c7zrY1jO/giphy.gif);
+    background-image: url(https://media.giphy.com/media/3osxYsSSxjWhZw0BUY/giphy.gif);
 }
 
 .profilecard-img {
@@ -27,10 +24,20 @@
     margin-top: -70px;
 }
 
+.profilecard-img:hover {
+    transform: scale(1.3);
+}
+
 .profilecard-job {
     margin-top: -20px;
     font-size: small;
-    padding-bottom: 20px;
+}
+
+.profilecard-mail {
+    text-decoration: none;
+    font-size: small;
+    margin-top: -10px;
+    padding-bottom: 30px;
 }
 
 .profilecard-links {
@@ -39,8 +46,6 @@
     width: 100%;
     border-top: 1px solid rgba(0, 0, 0, 0.3);
     gap: 3px;
-    /* border-bottom: 1px solid rgba(0, 0, 0, 0.5); */
-    /* padding: 20px; */
 }
 
 .profilecard-icons-links {
@@ -48,6 +53,7 @@
     width: 30px;
     border-radius: 50%;
     padding: 20px;
+    cursor: pointer;
 }
 
 .profilecard-icons-links:hover {
@@ -58,24 +64,9 @@
     height: 35px;
     width: 30px;
     padding: 20px;
+    cursor: pointer;
 }
 
 .profilecard-icons-links-square:hover {
     transform: scale(1.5);
-}
-
-
-
-
-
-
-/* LIGHT-BULB */
-.profilecard-lightBulb-div {
-    padding: 1px;
-    /* border: 1px solid rgba(10, 10, 10, 0.1) */
-}
-
-.profilecard-lightBulb-img {
-    height: 80px;
-    width: 55px;
 }
