--- a/src/components/Information/Information.css
+++ b/src/components/Information/Information.css
@@ -3,14 +3,11 @@
     height: 400px;
     width: 65%;
     border-radius: 10px;
+
+    background-color: rgba(255, 255, 255, 1);
     box-shadow: 3px 3px 12px 1px rgba(0, 0, 0, 0.4);
     position: relative;
 }
-
-
-
-
-
 
 .information-nav {
     display: flex;
@@ -18,8 +15,7 @@
     width: 100%;
     position: absolute;
     bottom: 0px;
-    /* background-color: rgba(0, 51, 106, 0.9); */
-    background-color: rgba(5, 116, 3, 0.9);
+    background-color: #fb8500;
     border-radius: 0px 0px 10px 10px;
     justify-content: space-evenly;
 }
@@ -39,6 +35,5 @@
 }
 
 .information-nav-btn:hover {
-    /* background-color: rgba(29, 122, 222, 0.9); */
-    background-color: rgba(27, 183, 24, 0.9);
+    background-color: #ffb703;
 }
