--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,17 +1,19 @@
 .Projects {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     height: 100%;
     width: 100%;
     gap: 15px;
     padding: 30px;
+    /* margin: 30px; */
+    justify-items: center;
 }
 
 .projects-img {
     border-radius: 5px;
     box-shadow: 3px 3px 12px 1px rgba(0, 0, 0, 0.4);
-    height: 150px;
-    width: 150px;
+    height: 300px;
+    width: 300px;
     filter: rgb(58, 58, 58);
     filter: grayscale();
 }
