--- a/src/components/Information/Information.css
+++ b/src/components/Information/Information.css
@@ -3,7 +3,6 @@
     height: 400px;
     width: 65%;
     border-radius: 10px;
-
     background-color: rgba(255, 255, 255, 1);
     box-shadow: 3px 3px 12px 1px rgba(0, 0, 0, 0.4);
     position: relative;
@@ -17,23 +16,62 @@
     bottom: 0px;
     background-color: #fb8500;
     border-radius: 0px 0px 10px 10px;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
 }
 
-.information-nav-btn {
+.information-nav-btn-aboutme {
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    border: 1px solid rgba(0, 0, 0, 0.4);
-    border-radius: 10px;
-    padding: 8px;
-    width: 33%;
-    font-size: small;
-    color: white;
-    cursor: pointer;
+    width: 33.3%;
+    background-color: #fb8500;
+    /* background-color: wheat; */
+    border-radius: 0px 0px 0px 10px;
     text-decoration: none;
+    color:#023047;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 
-.information-nav-btn:hover {
+.information-nav-btn-aboutme:hover {
     background-color: #ffb703;
+    scale: 1.3;
+    border-radius: 10px;
+    transition: all .6s;
+}
+
+.information-nav-btn-projects {
+    display: flex;
+    justify-content: center;
+    width: 33.3%;
+    background-color: #fb8500;
+    text-decoration: none;
+    color:#023047;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.information-nav-btn-projects:hover {
+    background-color: #ffb703;
+    scale: 1.3;
+    border-radius: 10px;
+    transition: all .6s;
+}
+
+.information-nav-btn-certificates {
+    display: flex;
+    justify-content: center;
+    width: 33.3%;
+    background-color: #fb8500;
+    border-radius: 0px 0px 10px 0px;
+    text-decoration: none;
+    color:#023047;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.information-nav-btn-certificates:hover {
+    background-color: #ffb703;
+    scale: 1.3;
+    border-radius: 10px;
+    transition: all .6s;
 }
