--- a/src/components/ProfileCard/ProfileCard.css
+++ b/src/components/ProfileCard/ProfileCard.css
@@ -14,8 +14,9 @@
     width: 100%;
     border-radius: 10px 10px 0px 0px;
     background-color: #fd9e02;
-    /* background-image: url(https://media.giphy.com/media/3osxYsSSxjWhZw0BUY/giphy.gif); */
+    background-image: url(https://media.giphy.com/media/l378bC3TlAEMVk2oU/giphy.gif);
     background-position: center;
+    background-size: contain;
     
 }
 
