--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,8 @@
     height: 40px;
     width: 40px;
     margin-bottom: 50px;
+    border-radius: 50%;
+    box-shadow: 3px 3px 12px 5px rgba(0, 0, 0, 0.9);
 }
 
 .app-copyright:hover {
