--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -36,6 +36,7 @@
     padding-right: 30px;
     margin-bottom: 10px;
     font-size: 14px;
+    color: dimgrey;
     
     /* background-color: green; */
 }
