responsive media queries css

--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,19 @@
     animation: ease-in-out(0.77, 0, 0.175, 1);
     animation-iteration-count:infinite;
 }
+
+@media (max-width:800px) {
+    .App {
+        overflow: scroll;
+    }
+
+    .profile-about-projects {
+        display: flex;
+        flex-direction: column;
+        margin-top: 300px;
+    }
+
+    .app-copyright {
+        margin-top: 50px;
+    }
+}
