--- a/src/components/Information/Information.css
+++ b/src/components/Information/Information.css
@@ -75,3 +75,11 @@
     border-radius: 10px;
     transition: all .6s;
 }
+
+
+@media (max-width:800px) {
+    .Information {
+        height: 300px;
+        width: 100%;
+    }
+}
