--- a/src/components/ProfileCard/ProfileCard.css
+++ b/src/components/ProfileCard/ProfileCard.css
@@ -7,10 +7,11 @@
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 1);
     box-shadow: 3px 3px 12px 10px rgba(0, 0, 0, 0.9);
+    /* overflow: hidden; */
 }
 
 .profilecard-banner {
-    height: 180px;
+    height: 40%;
     width: 100%;
     border-radius: 10px 10px 0px 0px;
     background-color: #fd9e02;
@@ -69,4 +70,12 @@
 
 .profilecard-icons-links-square:hover {
     transform: scale(1.5);
+}
+
+@media (max-width:800px) {
+    .ProfileCard {
+        height: 800px;
+        width: 100%;
+        margin-bottom: -40px;
+    }
 }
