--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 
 @media (max-width:800px) {
     .App {
-        overflow: scroll;
+        overflow-y: scroll;
     }
 
     .profile-about-projects {
