--- a/src/components/Certificates/Certificates.css
+++ b/src/components/Certificates/Certificates.css
@@ -1,20 +1,23 @@
 .Certificates {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    /* grid-template-columns: repeat(auto-fill, minmax(min(100%, 10rem), 1fr)); */
-    width: 100%;
-    padding: 3%;
-    gap: 3%;
-    margin-bottom: 3%;
-    /* align-content: center; */
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    justify-items: center;
+    height: 96%;
+    width: 96%;
+    padding-left: 2%;
+    padding-right: 2%;
+    margin-bottom: 2%;
     align-items: center;
+    margin-top: 2%;
+    gap: 15px;
+    overflow-y: scroll;
 }
 
 .certificates-img {
     border-radius: 5px;
     box-shadow: 3px 3px 12px 1px rgba(0, 0, 0, 0.4);
-    height: 100%;
-    width: 100%;
+    height: 150px;
+    width: 150px;
     filter: rgb(58, 58, 58);
     filter: grayscale();
 }
@@ -22,12 +25,4 @@
 .certificates-img:hover {
     filter: none;
     transition: filter .6s;
-}
-
-@media (max-width:1150px) {
-    .Certificates {
-        height: 82%;
-        grid-template-columns: repeat(2, 1fr);
-        overflow-y: scroll;
-    }
 }
