--- a/src/components/Information/Information.css
+++ b/src/components/Information/Information.css
@@ -8,9 +8,15 @@
     position: relative;
 }
 
+.information-container {
+    height: 90%;
+    width: 100%;
+}
+
 .information-nav {
     display: flex;
     flex-direction: row;
+    height: 10%;
     width: 100%;
     position: absolute;
     bottom: 0px;
@@ -77,7 +83,7 @@
 }
 
 
-@media (max-width:800px) {
+@media (max-width:900px) {
     .Information {
         height: 300px;
         width: 100%;
